test/files/run/reify-repl-fail-gracefully.check
Type in expressions to have them evaluated.
Type :help for more information.

scala> 

scala> import language.experimental.macros
import language.experimental.macros

scala> import scala.reflect.runtime.universe._
import scala.reflect.runtime.universe._

scala> 

scala> reify
<console>:12: error: macros cannot be partially applied
              reify
              ^

scala> 

scala> 
